<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="DuplicateDefinition">
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Share semua aktivitas terbaru di Dicoding bersama Story App Dicoding terbaru dan terlengkap</string>
    <string name="title_welcome_page">Story APP</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>


    <!--    App Story-->

    <string name="registers">Register</string>
    <string name="email_invalid">Format Email Tidak Sesuai</string>
    <string name="password_error">Password kurang dari 8</string>
    <string name="password_salah">Password kurang dari 8</string>

    <string name="login_berhasil">Login Berhasil</string>
    <string name="login_gagal">Login Gagal</string>
    <string name="keluar">Keluar dari Account</string>

    <string name="akun_sukses_dibuat">Akun Berhasil Dibuat</string>
    <string name="akun_gagal_dibuat">Akun Gagal Dibuat</string>

    <string name="anda_yakin">Anda Yakin mau Keluar Account ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="detail_story">Detail Story</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="sign_out">Keluar</string>

    <string name="add_story">Add Story</string>
    <string name="preview">Preview</string>
    <string name="description">Description</string>
    <string name="uploud1">Saya Yakin Ingin Meng-Uploud nya!</string>
    <string name="kamera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="add_new_story_failed">Add new story failed</string>

    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please, input your image!!!</string>
    <string name="setting">Setting</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="maps">Maps</string>
    <string name="retry">Coba lagi</string>

    <string name="email_empty">Email Tidak Boleh Kosong</string>
    <string name="password_empty">Password Tidak Boleh Kosong</string>
    <string name="lokasi_tidak_tersedia">Pengguna Tidak Menambahkan Lokasi</string>
    <string name="Location">Lokasi</string>
    <string name="request_denied">Request Ditolak</string>
    <string name="name_empty">Nama Tidak Boleh Kosong</string>
    <string name="are_you_sure">Yakin?</string>
    <string name="Date">DD-MM-YYYY|00:00</string>


</resources>